2000-10-25  Mathieu Lacage  <mathieu@eazel.com>

	* configure.in:
	fix LIBEFS check. add gtkdoc check.
	
	* devel-docs/gnome-vfs/gnome-vfs-decl.txt:
	* devel-docs/gnome-vfs/gnome-vfs-docs.sgml:
	avoid an obvious error when compiling.
	
	* devel-docs/gnome-vfs/tmpl/gnome-vfs-mime-info.sgml:
	* devel-docs/gnome-vfs/tmpl/gnome-vfs-mime.sgml:
	* devel-docs/gnome-vfs/tmpl/libgnome-vfs.sgml:
	regenerate templates...

2000-10-25  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	(gnome_vfs_mime_sniff_buffer_get): Oops, got it wrong. This fixes
	another case that I missed.

2000-10-25  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	(gnome_vfs_mime_sniff_buffer_get): Fixed error with the handling
	of a case where the file is smaller than the requested sniff
	buffer. The check was broken, and it also didn't set an error
	code to let the caller know there's insufficient data.

	* configure.in: Fixed check of gcc command-line switches to work
	properly even with -O.

2000-10-24  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.mime: Added extension-based MIME type
	entries for Word and Excel, since we want them to play nice
	with StarOffice at least.

2000-10-24  Rebecca Schulman  <rebecka@eazel.com>
	
	Fixed a bug in the gnome vfs mime magic that we weren't
	actually seeking and reading the right chunks of files.
	Fixing this exposed a large performance problem related to
	mime types with magic numbers far into the file, so with
	Pavel's agreement, I remooved the microsoft mime types that
	are a 2x performance issue for the mime code.  apparently,
	we never noticed they were working in the first place, but this
	really isn't an appropriate thing to do in the future.
	Also fixed a bug that the mime stuff was trying to reread after
	the end of the file again and again, but I don't think this
	helped performance as much as we first hoped.
